--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+   "http://www.w3.org/TR/html4/loose.dtd">
+
+<html lang="en">
 <head>
-  <title>SampleApp</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>Ruby on Rails Tutorial Sample App | <%= @title %></title>
+	<meta name="author" content="Ankur Shah">
+	<!-- Date: 2010-11-03 -->
+    <%= csrf_meta_tag %>
 </head>
 <body>
-
-<%= yield %>
-
+    <%= yield %>
 </body>
 </html>
